source/error/20200004/27_error.txt
/home/yenoh/term_project_2/source/STD_DIR/20200004/27.c: In function ‘main’:
/home/yenoh/term_project_2/source/STD_DIR/20200004/27.c:14:26: error: ‘ssu_signal_handler’ undeclared (first use in this function)
   14 |     sig_act.sa_handler = ssu_signal_handler;
      |                          ^~~~~~~~~~~~~~~~~~
/home/yenoh/term_project_2/source/STD_DIR/20200004/27.c:14:26: note: each undeclared identifier is reported only once for each function it appears in
